<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnFragmentSearch"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/title_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFragmentRead"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFragmentRead"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/title_read"
        app:layout_constraintEnd_toStartOf="@+id/btnFragmentSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFragmentFiles"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnFragmentFiles"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/title_files"
        app:layout_constraintEnd_toStartOf="@+id/btnFragmentRead"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFragmentFavorites"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFragmentFavorites"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/title_favorites"
        app:layout_constraintEnd_toStartOf="@+id/btnFragmentFiles"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFragmentSettings"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFragmentSettings"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/title_settings"
        app:layout_constraintEnd_toStartOf="@+id/btnFragmentFavorites"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>